--- a/27Jan/test.html
+++ b/27Jan/test.html
@@ -5,7 +5,7 @@
     mewar
     </TITLE>
     </HEAD>
-    <BODY  bgcolor="yellow ">
+    <BODY  bgcolor="#2A75C0   ">
         <h3>reply form</h3>
         <FORM ACTION ="maito: user@provide.com" METHOD="POST" ENCTYPE="text/plain">
             <p>
@@ -15,7 +15,7 @@
                         <OPTION SELECTED VALUE="18 to 25">18 to 25 </OPTION>
                         <OPTION VALUE="25 to 30">25 TO 30</OPTION>
                         <OPTION VALUE="30 to 40">30 TO 40</OPTION>
-                        <OPTION VALUE="OVER 40">OVER 40</OPTION>
+                     <OPTION VALUE="OVER 40">OVER 40</OPTION>
                     </SELECT> your age<BR>
                     <input type="text" NAME="name" size=40> your name <BR>
                     <input type="text" NAME="email" size=40> your e-mail
